# DOP-FX

./: .gitignore  README.md  config.json  config.py  main.py  pyproject.toml  pytest.ini  util.py
notebooks/: test.ipynb
source/ingestion/: __init__.py  central_bank_ingestor.py
source/normalization/: __init__.py  central_bank_normalizer.py
source/storage/: __init__.py  db.py  storage_manager.py
tests/: README.md  __init__.py  conftest.py  test_config.py  test_util.py
tests/ingestion/: __init__.py  test_central_bank_ingestor.py
tests/integration/: test_pipeline.py
tests/normalization/: __init__.py  test_central_bank_normalizer.py
tests/storage/: __init__.py  test_db.py  test_storage_manager.py
